--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 			crossorigin="anonymous"
 		/>
 		<link rel="stylesheet" href="css/style.css" />
-		<title>Chat App</title>
+		<title>Group Chat</title>
 	</head>
 	<body>
 		<div class="join-container">
